core/build_errors.txt
cargo :    Compiling voidwarp-core v0.1.0 (G:\project\Voi
dWarp\core)
所在位置 行:1 字符: 1
+ cargo build 2>&1 | Out-File -FilePath build_errors.txt 
-Encoding utf8
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (   Compiling
     vo...\VoidWarp\core):String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
error[E0599]: no method named `unregister` found for enum
 `Option<T>` in the current scope
   --> core\src\discovery\mod.rs:340:33
    |
340 |             let _ = self.daemon.unregister(&fullnam
e);
    |                                 ^^^^^^^^^^ method n
ot found in `Option<ServiceDaemon>`
    |
note: the method `unregister` exists on the type `Service
Daemon`
   --> C:\Users\X\.cargo\registry\src\index.crates.io-194
9cf8c6b5b557f\mdns-sd-0.17.2\src\service_daemon.rs:419:5
    |
419 |     pub fn unregister(&self, fullname: &str) -> Res
ult<Receiver<UnregisterStatus>> {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: consider using `Option::expect` to unwrap the `Serv
iceDaemon` value, panicking if the value is an `Option::N
one`
    |
340 |             let _ = self.daemon.expect("REASON").un
register(&fullname);
    |                                +++++++++++++++++

error[E0599]: no method named `shutdown` found for enum `
Option<T>` in the current scope
   --> core\src\discovery\mod.rs:349:29
    |
349 |         let _ = self.daemon.shutdown();
    |                             ^^^^^^^^ method not fou
nd in `Option<ServiceDaemon>`
    |
note: the method `shutdown` exists on the type `ServiceDa
emon`
   --> C:\Users\X\.cargo\registry\src\index.crates.io-194
9cf8c6b5b557f\mdns-sd-0.17.2\src\service_daemon.rs:438:5
    |
438 |     pub fn shutdown(&self) -> Result<Receiver<Daemo
nStatus>> {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^
help: consider using `Option::expect` to unwrap the `Serv
iceDaemon` value, panicking if the value is an `Option::N
one`
    |
349 |         let _ = self.daemon.expect("REASON").shutdo
wn();
    |                            +++++++++++++++++

For more information about this error, try `rustc --expla
in E0599`.
error: could not compile `voidwarp-core` (lib) due to 2 p
revious errors
